fix (project/kicl/src/api/behance/component/projects/projects, project/kicl/src/app/view/projects/projects) Projects gallery flickering

--- a/project/kicl/src/api/behance/component/projects/projects.scss
+++ b/project/kicl/src/api/behance/component/projects/projects.scss
@@ -12,6 +12,18 @@
 		}
 	}
 
+	a {
+		&.hasBackgroundImage {
+			background-position: center;
+			background-repeat: no-repeat;
+			background-size: cover;
+
+			img {
+				@include hidden();
+			}
+		}
+	}
+
 	.title {
 		@include set-transition(transform);
 
